# proto-danksharding-crypto

./: .gitignore  Cargo.toml  readme.md
crypto/: Cargo.toml
crypto/benches/: benchmark.rs  my_benchmark.rs
crypto/src/: arkworks.rs  batch_inversion.rs  bls_point_encoding.rs  constants.rs  domain.rs  kzg.rs  lib.rs  polynomial.rs  roots_of_unity.rs  test_utils.rs
crypto/src/kzg/: aggregated_proof.rs  commit_key.rs  opening_key.rs  proof.rs  quotient_poly.rs  srs.rs  transcript.rs
eip4844/: Cargo.toml
eip4844-js/: Cargo.toml
eip4844-js/src/: lib.rs
eip4844/src/: constants.rs  lib.rs  permutation.rs
specs/: Cargo.toml
specs/benches/: my_benchmark.rs
specs/src/: constants.rs  lib.rs  permutation.rs
