[package]
name = "eip4844"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crypto = { path = "../crypto" }

[dev-dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
hex = "*"

[features]
default = []
parallel = ["crypto/parallel"]
