[package]
name = "specs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crypto = { path = "../crypto" }
bitvec = "1.0.1"


[features]
# Do not use this flag in production
default = ["insecure"]
insecure = ["crypto/insecure"]
